    - Add --allow for changing allowed sets.
    - Add a native SVG backend. Its graphical output may be slightly less
      pretty than Cairo (still used by default if available) but the SVG
      code provides attributes to manipulate objects from HTML/JS.
      See dynamic_SVG_example.html for an example.
  + Add --nodeset options to hwloc-calc for converting between cpusets and
    nodesets.
  + hwloc-annotate may annotate multiple locations at once.
  + Add a HTML/JS version of hwloc-ps. See contrib/hwloc-ps.www/README.
  + Add bash completions.


Version 2.0.4 (also included in 1.11.13 when appropriate)
-------------
* Add support for Linux 5.3 new sysfs cpu topology files with Die information.
* Add support for Intel v2 Extended Topology Enumeration in the x86 backend.
* Tiles, Modules and Dies are exposed as Groups for now.
  + HWLOC_DONT_MERGE_DIE_GROUPS=1 may be set in the environment to prevent
    Die groups from being automatically merged with identical parent or children.
* Ignore NUMA node information from AMD topoext in the x86 backend,
  unless HWLOC_X86_TOPOEXT_NUMANODES=1 is set in the environment.
* Group objects have a new "dont_merge" attribute to prevent them from
  being automatically merged with identical parent or children.


Version 2.0.3 (also included in 1.11.12 when appropriate)
-------------
* Fix build on Cygwin, thanks to Marco Atzeri for the patches.
* Fix a corner case of hwloc_topology_restrict() where children would
  become out-of-order.
* Fix the return length of export_xmlbuffer() functions to always
  include the ending \0.
* Fix lstopo --children-order argument parsing.


Version 2.0.2 (also included in 1.11.11 when appropriate)
-------------
* Add support for Hygon Dhyana processors in the x86 backend,
  thanks to Pu Wen for the patch.
* Fix symbol renaming to also rename internal components,
  thanks to Evan Ramos for the patch.
* Fix build on HP-UX, thanks to Richard Lloyd for reporting the issues.