@@ -50,6 +50,7 @@ void usage(const char *name, FILE *where)
 #endif
   fprintf(where, "  --taskset      Use taskset-specific format when displaying cpuset strings\n");
   fprintf(where, "Input topology options:\n");
+  fprintf(where, "  --no-smt       Only keep a single PU per core\n");
   fprintf(where, "  --restrict <set>   Restrict the topology to processors listed in <set>\n");
   fprintf(where, "  --disallowed   Include objects disallowed by administrative limitations\n");
   fprintf(where, "  --hbm          Only consider high bandwidth memory nodes\n");
@@ -76,6 +77,7 @@ int main(int argc, char *argv[])
   int force = 0;
   int single = 0;
   int verbose = 0;
+  int no_smt = 0;
   int only_hbm = -1;
   int logical = 1;
   int taskset = 0;
@@ -140,6 +142,10 @@ int main(int argc, char *argv[])
       }
       if (!strcmp(argv[0], "--single")) {
 	single = 1;
+	goto next;
+      }
+      if (!strcmp(argv[0], "--no-smt")) {
+	no_smt = 1;
 	goto next;
       }
       if (!strcmp(argv[0], "-f") || !strcmp(argv[0], "--force")) {
@@ -448,6 +454,11 @@ int main(int argc, char *argv[])
       fprintf(stderr, "--mempolicy ignored unless memory binding is also requested with --membind.\n");
   }
 
+  if (!got_cpubind && no_smt) {
+    hwloc_bitmap_copy(cpubind_set, hwloc_topology_get_topology_cpuset(topology));
+    got_cpubind = 1;
+  }
+
   if (got_cpubind) {
     if (hwloc_bitmap_iszero(cpubind_set)) {
       if (verbose >= 0)
@@ -465,6 +476,23 @@ int main(int argc, char *argv[])
       if (verbose)
 	fprintf(stderr, "Conflicting CPU and memory binding requested, adding HWLOC_CPUBIND_NOMEMBIND flag.\n");
       cpubind_flags |= HWLOC_CPUBIND_NOMEMBIND;
+    }
+    if (no_smt) {
+      if (hwloc_get_type_depth(topology, HWLOC_OBJ_CORE) == HWLOC_TYPE_DEPTH_UNKNOWN) {
+	fprintf(stderr, "Topology has no Core object, ignoring --no-smt\n");
+      } else {
+	hwloc_obj_t core = NULL;
+	while ((core = hwloc_get_next_obj_covering_cpuset_by_type(topology, cpubind_set, HWLOC_OBJ_CORE, core)) != NULL) {
+	  int firstpu = hwloc_bitmap_first(core->cpuset);
+	  int hadpu = hwloc_bitmap_isset(cpubind_set, firstpu);
+	  assert(firstpu >= 0);
+	  /* remove the entire core */
+	  hwloc_bitmap_andnot(cpubind_set, cpubind_set, core->cpuset);
+	  /* put back its first PU if it was there */
+	  if (hadpu)
+	    hwloc_bitmap_set(cpubind_set, firstpu);
+	}
+      }
     }
     if (single)
       hwloc_bitmap_singlify(cpubind_set);
