@@ -93,6 +93,8 @@ Version 2.1.0
       See dynamic_SVG_example.html for an example.
   + Add --nodeset options to hwloc-calc for converting between cpusets and
     nodesets.
+  + Add --no-smt to hwloc-bind and hwloc-calc to ignore multiple
+    PU in SMT cores.
   + hwloc-annotate may annotate multiple locations at once.
   + Add a HTML/JS version of hwloc-ps. See contrib/hwloc-ps.www/README.
   + Add bash completions.
